# vimana

./: .bazelrc  .envrc  .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  LICENSE.md  LICENSE.txt  MODULE.bazel  README.md  go.mod  go.sum  public  requirements.txt
api/v1/: BUILD.bazel  README.md  deploy.yaml  domains.go  domains.proto  server.go  service.go  services.proto
bootstrap/: BUILD.bazel  bootstrap.py  image-push.sh
cli/: BUILD.bazel  README.md  main.rs  user.rs
cli/protoc/: BUILD.bazel  main.rs  wit-old.rs  wit.rs
cli/protoc/tests/: BUILD.bazel  success-test.py  util.py
cluster/: BUILD.bazel  create.py  create.sh  deploy.yaml  destroy.py  profiles-schema.yaml  profiles-validation-test.py  profiles.yaml
cluster/bootstrap/: BUILD.bazel  bootstrap.bzl  bootstrap.py  image-push.py  image-push.sh  private.bzl  self-signed-tls.sh
cluster/node/: BUILD.bazel  containerd-config.toml  image-make.py  image-make.sh  preseed-template.cfg  provision-vimana.sh  vimana-node.pkr.hcl  vimanad.prod.service  workd.prod.service
cluster/profiles/: BUILD.bazel  load.py  profiles.yaml  validation-test.py
compiler/: BUILD.bazel  README.md  common.rs  compile.rs  main.rs  metadata.rs  wit.rs
compiler/tests/: BUILD.bazel  success-test.py  util.py
compiler/tests/data/: all-scalars-proto2.proto  all-scalars.wit  compound-types.proto  compound-types.wit  scalar-types-proto2.wit  scalar-types-proto3.proto  scalar-types-proto3.wit
dev/: .gitignore  BUILD.bazel  README.md  bash-util.sh  bash-utils.sh  build-current-file.sh  current-file.sh  dependencies-upgrade.py  file.sh  generate-tls-credentials.sh  platform-binary.bzl  sh-in-place.bzl  start-minikube.sh  update-dependencies.sh
dev/bazel-container/: BUILD.bazel  Dockerfile  build.sh  debian-setup.sh
dev/lib/: BUILD.bazel  util.py  util.sh
dev/minikube/: BUILD.bazel  hotswap.sh  platform-executable.bzl  restart.sh  vimanad.kicbase.service  workd.kicbase.service
dev/patches/: BUILD.bazel  README.md  cri-api.patch  konnectivity-client.patch
dev/rules/: environment.bzl  sh-in-place.bzl
dev/tls/: BUILD.bazel  generate.sh
dev/tools/: bazel-docker  crane  crictl  gemini  helm  kops  kubectl  kustomize  minikube  openssl  operator-sdk  wasm-tools  wasmtime
e2e/: BUILD.bazel  README.md  cluster.bzl  mvp.py  placeholder.sh  runner.sh  walkthrough-bootstrap.yaml  walkthrough.py
ingress/: BUILD.bazel  service.proto
operator/: BUILD.bazel  Makefile  PROJECT  README.md  build-tools.bzl  helm-template-test-runner.py  kustomize-manager.sh  watches.yaml
operator/api/v1alpha1/: BUILD.bazel  component_types.go  domain_types.go  groupversion_info.go  server_types.go  vimana_types.go  zz_generated.deepcopy.go
operator/cmd/: BUILD.bazel  main.go
operator/config/: BUILD.bazel
operator/config/crd/: BUILD.bazel  kustomization.yaml
operator/config/default/: BUILD.bazel  kustomization.yaml  metrics_service.yaml
operator/config/manager/: BUILD.bazel  kustomization.yaml  manager.yaml
operator/config/manifests/: BUILD.bazel  kustomization.yaml
operator/config/network-policy/: BUILD.bazel  allow-metrics-traffic.yaml
operator/config/prometheus/: BUILD.bazel  monitor.yaml
operator/config/rbac/: BUILD.bazel  component_admin_role.yaml  component_editor_role.yaml  component_viewer_role.yaml  domain_admin_role.yaml  domain_editor_role.yaml  domain_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  role.yaml  server_admin_role.yaml  server_editor_role.yaml  server_viewer_role.yaml  service_account.yaml  service_admin_role.yaml  service_editor_role.yaml  service_viewer_role.yaml  vimana_admin_role.yaml  vimana_editor_role.yaml  vimana_viewer_role.yaml
operator/config/samples/: BUILD.bazel  api_v1alpha1_component.yaml  api_v1alpha1_domain.yaml  api_v1alpha1_server.yaml  api_v1alpha1_service.yaml  api_v1alpha1_vimana.yaml  kustomization.yaml
operator/config/scorecard/: BUILD.bazel
operator/go/: BUILD.bazel  Makefile  PROJECT  README.md  go.mod
operator/go/cmd/: BUILD.bazel  main.go
operator/helm-charts/: BUILD.bazel
operator/helm-charts/component/: BUILD.bazel  Chart.yaml  values.yaml
operator/helm-charts/domain/: BUILD.bazel  Chart.yaml  values.yaml
operator/helm-charts/server/: BUILD.bazel  Chart.yaml  values.yaml
operator/helm-charts/service/: BUILD.bazel  Chart.yaml  values.yaml
operator/helm-charts/vimana/: BUILD.bazel  Chart.yaml  values.yaml
operator/internal/controller/: BUILD.bazel  component_controller.go  component_controller_test.go  controllers_common.go  domain_controller.go  domain_controller_test.go  server_controller.go  server_controller_test.go  suite_test.go  vimana_controller.go  vimana_controller_test.go
operator/test/e2e/: BUILD.bazel  e2e_suite_test.go  e2e_test.go
operator/test/utils/: BUILD.bazel
proto/: BUILD.bazel  coding.proto
protoc-gen/: BUILD.bazel  README.md  actio.rs  wit.rs
runtime/: BUILD.bazel  containers.rs  kubelet-notes.md  metadata.proto  names.rs  pods.rs  state.rs
runtime/cri/: mod.rs
runtime/decode/: BUILD.bazel  scalar.rs
runtime/decode/tests/: BUILD.bazel
runtime/encode/: BUILD.bazel  compound.rs
runtime/encode/tests/: BUILD.bazel  success-test.rs
runtime/tests/: BUILD.bazel  list-test.py  success-test.py  util.py
runtime/tests/components/: BUILD.bazel  adder.c  adder.proto  adder.wit  multiplier.c
util/: BUILD.bazel  README.md  error.rs  names.rs  update-dependencies.sh  wit-bindgen.bzl
work/: BUILD.bazel  README.md  error.rs  names.rs
work/runtime/: BUILD.bazel  README.md  coding.proto  container.proto  containers.rs  cri.rs  data-plane.rs  error.rs  grpc-pod.rs  grpc.rs  host.rs  ipam.rs  kubelet-notes.md  logging.rs  main.rs  metadata.proto  names.rs  pods.proto  pods.rs  pool.rs  state.rs
work/runtime/cri/: image.rs  mod.rs  runtime.rs
work/runtime/decode/: BUILD.bazel  common.rs  compound.rs  lib.rs  message.rs  scalar.rs
work/runtime/encode/: BUILD.bazel  common.rs  compound.rs  lib.rs  message.rs  scalar.rs
work/runtime/tests/: BUILD.bazel  api.proto  ipam.py  util.py  (+2 more)
work/wit/: BUILD.bazel  grpc.wit
(+135 files in other folders)
