load("@rules_rust//proto/prost:defs.bzl", "rust_prost_toolchain")
load("@rules_rust//rust:defs.bzl", "rust_library_group")

# Set up a Prost Bazel toolchain
# using the Prost and Tonic binaries referenced in `MODULE.bazel`
# http://bazelbuild.github.io/rules_rust/rust_proto.html#custom-prost-deps

rust_library_group(
    name = "prost-runtime",
    deps = ["@crates//:prost"],
)

rust_library_group(
    name = "tonic-runtime",
    deps = [
        ":prost-runtime",
        "@crates//:tonic",
    ],
)

rust_prost_toolchain(
    name = "prost-toolchain-impl",
    prost_plugin = "@crates//:protoc-gen-prost__protoc-gen-prost",
    prost_runtime = ":prost-runtime",
    prost_types = "@crates//:prost-types",
    tonic_plugin = "@crates//:protoc-gen-tonic__protoc-gen-tonic",
    tonic_runtime = ":tonic-runtime",
)

toolchain(
    name = "prost-toolchain",
    toolchain = "prost-toolchain-impl",
    toolchain_type = "@rules_rust//proto/prost:toolchain_type",
)
