[package]
name = "actio"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.7", features = ["tokio"] }
prost = "0.13.1"
prost-types = "0.13.1"
protoc-gen-prost = "0.3.1"
protoc-gen-tonic = "0.4.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = "0.12.1"
wasmtime = "23.0.1"
