[package]
name = "vimana"
version = "0.0.0"
edition = "2021"

# Cargo insists on having this `[[bin]]` entry here for "correctness",
# even though it's ignored by Bazel.
[[bin]]
name = "runtime"
path = "runtime"

[dependencies]
anyhow = "1.0.100"
axum = "0.7.9"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
heck = "0.5.0"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
httpdate = "1.0.3"
hyper = { version = "1.7.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
lazy_static = "1.5.0"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-stdout = "0.31.0"
papaya = "0.2.3"
prost = "0.13.5"
prost-types = "0.13.5"
protoc-gen-prost = "0.4.0"
protoc-gen-tonic = "0.4.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
rtnetlink = "0.18.1"
semver = "1.0.27"
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["std"] }
sha2 = "0.11.0-rc.3"
tokio = { version = "1.47.2", features = ["macros", "process", "rt-multi-thread", "signal", "fs", "sync"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.12.3"
tower = "0.5.2"
tower-service = "0.3.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
wasmtime = "37.0.2"
wit-encoder = "0.240.0"
