""" Spin up production-ready Vimana clusters. """

load("@rules_python//python:defs.bzl", "py_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# Create a new Vimana cluster using kOps.
sh_binary(
    name = "create",
    srcs = ["create.sh"],
    args = ["$(location @rules_k8s//:kops)"],
    data = [
        "//dev:bash-util",
        "@rules_k8s//:kops",
    ],
)

# Destroy an existing Vimana cluster using kOps.
sh_binary(
    name = "destroy",
    srcs = ["destroy.sh"],
    args = ["$(location @rules_k8s//:kops)"],
    data = [
        "//dev:bash-util",
        "@rules_k8s//:kops",
    ],
)

py_test(
    name = "profiles-validation-test",
    srcs = ["profiles-validation-test.py"],
    args = [
        "--schema=$(location :profiles-schema.yaml)",
        "$(location :profiles.yaml)",
    ],
    data = [
        ":profiles.yaml",
        ":profiles-schema.yaml",
    ],
    deps = [
        "@pypi//jsonschema",
        "@pypi//pyyaml",
    ],
)
