""" Manage Vimana clusters. """

load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "create",
    srcs = ["create.py"],
    data = [
        "//gateway:cluster.yaml",
        "@rules_k8s//:helm",
        "@rules_k8s//:kops",
        "@rules_k8s//:kubectl",
    ],
    deps = [
        "//cluster/profiles:load",
        "@pypi//google_cloud_compute",
        "@pypi//kubernetes",
        "@pypi//rich",
    ],
)

py_binary(
    name = "destroy",
    srcs = ["destroy.py"],
    data = ["@rules_k8s//:kops"],
    deps = [
        "//cluster/profiles:load",
        "@pypi//rich",
    ],
)
