""" Manage Vimana clusters. """

load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "create",
    srcs = ["create.py"],
    data = [
        "//operator:deploy",
        "@rules_k8s//:helm",
        "@rules_k8s//:kops",
    ],
    deps = [
        "//cluster/profiles:load",
        "//dev/lib:util-python",
        "@pypi//google_cloud_compute",
        "@pypi//kubernetes",
        "@pypi//rich",
    ],
)

py_binary(
    name = "destroy",
    srcs = ["destroy.py"],
    data = ["@rules_k8s//:kops"],
    deps = [
        "//cluster/profiles:load",
        "//dev/lib:util-python",
        "@pypi//rich",
    ],
)
