load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "compiler",
    srcs = [
        "compile.rs",
        "main.rs",
        "metadata.rs",
        "wit.rs",
    ],
    binary_name = "protoc-gen-vimana",
    visibility = ["//compiler/tests:__pkg__"],
    deps = [
        "//runtime:metadata-prost",
        "@crates//:anyhow",
        "@crates//:heck",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:semver",
        "@crates//:wit-encoder",
    ],
)

rust_test(
    name = "compiler-test",
    crate = ":compiler",
    data = ["@rules_wasm//:wasm-tools"],
    env = {"WASMTOOLS": "$(rootpath @rules_wasm//:wasm-tools)"},
)
